psa-mpol/add-psa-labels/.chainsaw-test/exception-sibling.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: add-psa-labels-exception-sibling
  labels: {}
