psa-mpol/add-psa-labels/.chainsaw-test/patched-ns02.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: restricted
  name: add-psa-labels-ns02
