psa-mpol/add-psa-labels/.chainsaw-test/patched-ns03.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
  name: add-psa-labels-ns03
