psa-mpol/add-psa-labels/.chainsaw-test/policy-exception.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: add-psa-labels-exception
  namespace: policy-exceptions
spec:
  policyRefs:
  - name: add-psa-labels
    kind: MutatingPolicy
  matchConditions:
  - name: exact-resource
    expression: object.metadata.name == 'add-psa-labels-exception-ns'
