psa-mpol/add-psa-labels/.chainsaw-test/exception-assert.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: add-psa-labels-exception-ns
  labels:
    foo: bar
