psa-mpol/add-psa-labels/.chainsaw-test/exception-sibling-expected.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: add-psa-labels-exception-sibling
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
